Fixed hover color not showing

--- a/css/colors.css
+++ b/css/colors.css
@@ -15,7 +15,7 @@ a {
   /*color: #5C8DAA;*/
 /*}*/
 a:hover {
-  color: ##43728E !important;
+  color: #43728E !important;
 }
 a:visited {
   color: #295975;
